[gd_scene load_steps=5 format=3 uid="uid://bxytlsqpwyd13"]

[ext_resource type="Script" path="res://player.gd" id="1_hbwyi"]
[ext_resource type="PackedScene" uid="uid://dci4b776jhllv" path="res://short_sword.tscn" id="2_xwix8"]

[sub_resource type="Theme" id="Theme_e3btp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1eapq"]
size = Vector2(30, 60)

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_hbwyi")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -575.0
offset_top = -322.0
offset_right = 575.0
offset_bottom = 326.0

[node name="ST" type="ProgressBar" parent="UI"]
layout_mode = 0
offset_left = 14.0
offset_top = 35.0
offset_right = 114.0
offset_bottom = 62.0
scale = Vector2(2, 1)
theme = SubResource("Theme_e3btp")
value = 100.0

[node name="HP" type="ProgressBar" parent="UI"]
layout_mode = 0
offset_left = 14.0
offset_top = 3.0
offset_right = 114.0
offset_bottom = 30.0
scale = Vector2(2, 1)
theme = SubResource("Theme_e3btp")
value = 100.0

[node name="weapon" type="Node2D" parent="."]

[node name="ShortSword" parent="weapon" instance=ExtResource("2_xwix8")]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_1eapq")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -15.0
offset_top = -30.0
offset_right = 15.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.545581, 0.374246, 0.2138, 1)

[node name="Camera2D" type="Camera2D" parent="."]

[node name="DodgeTimer" type="Timer" parent="."]
wait_time = 0.35
one_shot = true

[node name="STTimer" type="Timer" parent="."]
wait_time = 0.75
one_shot = true

[node name="LightTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="timeout" from="DodgeTimer" to="." method="_on_dodge_timer_timeout"]
[connection signal="timeout" from="STTimer" to="." method="_on_st_timer_timeout"]
[connection signal="timeout" from="LightTimer" to="." method="_on_light_timer_timeout"]
